--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -67,14 +67,13 @@ set -g status-justify left
 # show session, window, pane in left status bar
 set -g status-left-length 40
 set -g status-right-length 100
-set -g status-left '#[fg=green][#S#[fg=blue]:#I] #[default]'
-set -g status-right "#(is-online) | #(/usr/local/bin/battery -t) | #(date '+%a, %b %d - %H:%M')"
-set-option -g status-position top
+set -g status-right "#(date '+%a%e %b - %R')"
+set-option -g status-position bottom
 
 # color status bar
 #set -g status-utf8 on
-set -g status-bg '#666666'
-set -g status-fg white
+set -g status-bg '#222222'
+set -g status-fg gray
 
 # highlight current window
 set-window-option -g window-status-current-fg '#000000'
@@ -100,12 +99,12 @@ bind-key j command-prompt -p "join pane from: "  "join-pane -h -s '%%'"
 setw -g mode-keys vi
 
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -t vi-copy v begin-selection
+#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+#
+## Update default binding of `Enter` to also use copy-pipe
+#unbind -t vi-copy Enter
+#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Easily swap a pane (targeted by pane number) with the current pane
 bind-key s display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
@@ -120,4 +119,3 @@ bind-key C-b send-keys 'tat && exit' 'C-m'
 bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
 
 set-option -sg escape-time 10
-
