Update to match local

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -73,7 +73,7 @@ set-option -g status-position bottom
 # color status bar
 #set -g status-utf8 on
 set -g status-bg '#222222'
-set -g status-fg gray
+set -g status-fg '#999999'
 
 # highlight current window
 set-window-option -g window-status-current-fg '#000000'
@@ -93,7 +93,6 @@ bind-key b break-pane -d
 #
 # Prompted join-pane
 bind-key j command-prompt -p "join pane from: "  "join-pane -h -s '%%'"
-
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
