--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,11 +2,12 @@
 unbind C-b
 set -g prefix C-q
 
-# prefix r will reload the conf file in the current session
+# prefix r will reload the conf file in the current session
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 # use 256 term for pretty colors
-set-option -g default-terminal "screen-256color"
+set -g default-terminal 'tmux-256color'
+set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
 # use emacs style key bindings (readline) in the tmux command prompt
 set-option -g status-keys "emacs"
@@ -39,7 +40,7 @@ bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind-key -n C-Space if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Restore clear screen keybind mapped over by tmux-navigator
 bind C-l send-keys C-l
@@ -71,19 +72,15 @@ set -g status-right "#(date '+%a%e %b - %R')"
 set-option -g status-position bottom
 
 # color status bar
-#set -g status-utf8 on
 set -g status-bg '#222222'
 set -g status-fg '#999999'
 
 # highlight current window
-set-window-option -g window-status-current-fg '#000000'
-set-window-option -g window-status-current-bg '#cccccc'
+set-window-option -g window-status-current-style fg='#000000',bg='#cccccc'
 
 # set color of active pane
-set -g pane-border-fg colour235
-set -g pane-border-bg '#000000'
-set -g pane-active-border-fg green
-set -g pane-active-border-bg '#000000'
+set -g pane-border-style bg='#000000'
+set -g pane-active-border-style fg=green,bg='#000000'
 
 # get tmux to play nice with system clipboard (&vim)
 set-option -g default-command "reattach-to-user-namespace -l zsh"
@@ -96,14 +93,10 @@ bind-key j command-prompt -p "join pane from: "  "join-pane -h -s '%%'"
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
-
 # Setup 'v' to begin selection as in Vim
-#bind-key -t vi-copy v begin-selection
-#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-#
-## Update default binding of `Enter` to also use copy-pipe
-#unbind -t vi-copy Enter
-#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 # Easily swap a pane (targeted by pane number) with the current pane
 bind-key s display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
