Move zsh config to it's own directory

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,7 @@
 # Change the tmux prefix key
 unbind C-b
-set -g prefix C-q
+set -g prefix 'C-\'
+bind-key 'C-\' send-prefix
 
 # prefix r will reload the conf file in the current session
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
