--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,7 +6,7 @@ set -g prefix C-q
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 # use 256 term for pretty colors
-set -g default-terminal 'tmux-256color'
+set -g default-terminal 'xterm-256color'
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
 # use emacs style key bindings (readline) in the tmux command prompt
