--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,7 +27,8 @@ set -ag status-right "#[fg=green,bg=default,bright] #(pmset -g batt | tail -1 | 
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 # use 256 term for pretty colors
-set -g default-terminal 'screen-256color'
+# set -g default-terminal 'screen-256color'
+set -g default-terminal 'xterm-kitty'
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
 # use emacs style key bindings (readline) in the tmux command prompt
